--- a/BOLL相关策略研究.ipynb
+++ b/BOLL相关策略研究.ipynb
@@ -24,7 +24,7 @@
    ],
    "source": [
     "import  jqdatasdk\n",
-    "jqdatasdk.auth(\"15010492066\", \"798513\")"
+    "jqdatasdk.auth(\"XXXXXXXX\", \"XXXXXXXX\")"
    ]
   },
   {
