--- a/通过jqdata分析周内不同时间的涨跌幅与上涨概率.ipynb
+++ b/通过jqdata分析周内不同时间的涨跌幅与上涨概率.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 分析周内不同时间的涨跌幅与上涨概率\n",
+    "# 通过jqdata分析周内不同时间的涨跌幅与上涨概率\n",
     "由于使用两个账户进行定投，定投周期为每周，一个在周一进行定投，另一个在周四进行定投，昨天定投扣款后，总感觉周一定投时上涨的概率比周四上涨的概率大，于是有了本篇分析，分析的结果如下：\n",
     "1. 从历史角度来看（2007年至今），有且仅有周四的涨跌幅为负数，且有且仅有周四上涨概率小于50%\n",
     "2. 统计2018年年初至今的数据，周一依旧比周四涨幅与上涨概率大\n",
